# plang

./: .gitignore  CMakeLists.txt  README.md  open_docs  setup.sh
docs/: mainpage.md  notes.txt  open_docs  plang.doxygen  test.md  test.odt
docs/pics/: assignment-statement.dia  assignment-value.dia  class-data-decl.dia  class-decl.dia  complex_name.dia  data-decl.dia  data-definition.dia  dict-init.dia  expressions.dia  for-clause.dia  formatted-string.dia  func-call-statement.dia  if-else-clause.dia  import-statement.dia  inline-clause.dia  list-init.dia  method-body-statement.dia  method-body.dia  method-decl.dia  method-name-definition.dia  module.dia  return-statement.dia  scope-type.dia  switch-case-clause.dia  term-nterm.dia  try-except-clause.dia  while-clause.dia
src/: CMakeLists.txt
src/include/: class_definition.h  common.h  configure.h  errors.h  files.h  memory.h  method_definition.h  parser.h  ptr_lists.h  scanner.h  symbols.h  utils.h
src/include/utils/: char_buffer.h  errors.h  hashtable.h  memory.h
src/main/: CMakeLists.txt  main.c
src/parser/: CMakeLists.txt  class_definition.c  method_definition.c  parser.c
src/plang/: CMakeLists.txt
src/scanner/: CMakeLists.txt  common.c  interface.c  local.h  numbers.c  scanner.c  strings.c  symbols.c
src/symbols/: CMakeLists.txt  resolver.c  symbols.c
src/utils/: CMakeLists.txt  char_buffer.c  configure.c  errors.c  files.c  hashtable.c  memory.c  ptr_lists.c
tests/: CMakeLists.txt  keywordlist.txt  test_add_buffer_int.c
tests/scanner_test/: CMakeLists.txt  Makefile  binsrch.g  fact.g  fibon.g  scan_test  scanner_test.c  test0.g  test1.g  test2.g  test3.g  test4.g  test5.g
tests/symbols_test/: CMakeLists.txt  symbols_test.c
tests/symbols_test/resolve_symbols/: CMakeLists.txt  resolve_symbols.c
tests/symbols_test/store_symbols/: CMakeLists.txt  store_symbols.c
tests/unit_tests/: note.md
tests/unit_tests/tests/: unit_tests.h
